# shoes

./: 10-fastcgi.conf  README.md  postData.json  postData.sh  shoes.cabal
fcgi/: Main.hs
lib/Happstack/Server/: FastCGI.hs
lib/Shoes/: Conf.hs  Environment.hs  Router.hs
lib/Shoes/Domain/: Data.hs
server/: Main.hs
src/: MainFcgi.hs  MainStandalone.hs
src/Shoes/: Acid.hs  Controller.hs  Environment.hs  Router.hs  Storage.hs
src/Shoes/Domain/: Conf.hs  Model.hs
src/Shoes/Pages/: Common.hs  Item.hs  Items.hs
