name: shoes
version: 0.1
cabal-version: >= 1.8
build-type: Simple
license: OtherLicense
license-file: ""
category: Web Application
author: Viaceslav Pozdniakov
data-files:

library
  hs-source-dirs: lib
  build-depends:
    base == 4.*
    , happstack-server == 7.3.3
    , directory >= 1
    , safecopy == 0.8.2
    , acid-state == 0.12.1
    , ixset >= 1.0.5
    , mtl >= 2
  exposed-modules:
    Shoes.Router
    , Shoes.Environment
    , Shoes.Domain.Data

executable shoes-server
  main-is: Main.hs
  buildable: True
  hs-source-dirs: server
  build-depends:
    base == 4.*
    , shoes >= 0.1
    , mtl >= 2
    , happstack-server == 7.3.3
    , acid-state == 0.12.1
  ghc-options: -Wall -fwarn-tabs
    -funbox-strict-fields -O2
    -fno-warn-unused-do-bind

executable shoes-fcgi
  main-is: Main.hs
  buildable: True
  hs-source-dirs: fcgi
  build-depends:
    base == 4.*
    , shoes >= 0.1
    , mtl >= 2
    , happstack-server == 7.3.3
    , fastcgi == 3001.0.2.4
    , happstack-fastcgi == 0.1.5
    , acid-state == 0.12.1
  ghc-options: -Wall -fwarn-tabs
    -funbox-strict-fields -O2
    -fno-warn-unused-do-bind
