name: shoes
version: 0.1
cabal-version: >= 1.8
build-type: Simple
license: OtherLicense
license-file: ""
category: Web Application
author: Viaceslav Pozdniakov
data-files:
  static/flag
  , static/pure-min.css

executable shoes-server
  main-is: MainStandalone.hs
  buildable: True
  hs-source-dirs: src
  build-depends:
    base == 4.*
    , happstack-server == 7.3.3
    , directory >= 1
    , safecopy == 0.8.*
    , acid-state == 0.12.1
    , ixset >= 1.0.5
    , mtl >= 2
    , bytestring >= 0.10
    , transformers >= 0.3
    , aeson >= 0.6 && < 0.7
    , base64-bytestring >= 1
    , uuid >= 1.3.3
    , blaze-html >= 0.7
    , blaze-markup >= 0.6
    , filepath >= 1.3
  ghc-options: -threaded -Wall
    -fwarn-tabs -funbox-strict-fields -O2
    -fno-warn-unused-do-bind

executable shoes-fcgi
  main-is: MainFcgi.hs
  buildable: True
  hs-source-dirs: src
  build-depends:
    base == 4.*
    , happstack-server == 7.3.3
    , directory >= 1
    , safecopy == 0.8.*
    , acid-state == 0.12.1
    , ixset >= 1.0.5
    , mtl >= 2
    , bytestring >= 0.10
    , transformers >= 0.3
    , aeson >= 0.6 && < 0.7
    , base64-bytestring >= 1
    , uuid >= 1.3.3
    , blaze-html >= 0.7
    , blaze-markup >= 0.6
    , filepath >= 1.3
    , happstack-fastcgi == 0.1.5
  ghc-options: -threaded -Wall
    -fwarn-tabs -funbox-strict-fields -O2
    -fno-warn-unused-do-bind
